--- a/Session 8 - Navigation/app/src/main/res/layout/image_info.xml
+++ b/Session 8 - Navigation/app/src/main/res/layout/image_info.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/black"
-    tools:context=".MainActivity">
+    tools:context=".ui.legacy.MainActivity">
 
     <!-- Views -->
     <LinearLayout
