--- a/Session 8 - Navigation/app/src/main/res/layout/item_main.xml
+++ b/Session 8 - Navigation/app/src/main/res/layout/item_main.xml
@@ -8,7 +8,7 @@
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
     android:paddingBottom="16dp"
-    tools:context=".MainActivity" >
+    tools:context=".ui.legacy.MainActivity" >
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_preview"
